# blindage

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: smokeshow.yml  test.yml
blindage/: cli.py  database.py  messages.py  models.py  security.py  settings.py
blindage/cli/: app.py  gen.py  init.py  new.py  update.py
migrations/: env.py
migrations/versions/: 2610e82dfedd_add_other_attributes_table.py  d9b83b3871a9_init_database.py
tests/: conftest.py  test_cli.py  test_db.py  test_init.py  test_new.py  test_security.py  test_setting.py
