[tool.poetry]
name = "blindage"
version = "0.1.0"
description = ""
authors = ["Henrique Sebastião <contato@henriquesebastiao.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
sqlalchemy = "^2.0.35"
pydantic = "^2.9.2"
cryptography = "^43.0.1"
alembic = "^1.13.2"
argon2-cffi = "^23.1.0"
pyotp = "^2.9.0"
pyperclip = "^1.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"
taskipy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
radon = "^6.0.1"
bandit = "^1.7.10"

[tool.poetry.scripts]
blindage = "blindage.cli.app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E501']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint.per-file-ignores]
"database.py" = ["F811"]
"tests/*" = ["PLR6301"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.coverage.run]
omit = ["blindage/database.py"]

[tool.bandit]
exclude_dirs = ["blindage/messages.py"]

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff format .; ruff check . --fix'
radon = 'radon cc ./blindage -a -na'
bandit = 'bandit -c pyproject.toml -r ./blindage'
pre_test = 'task lint'
test = 'pytest -s -x --cov=blindage -vv'
post_test = 'coverage html'