[tool.poetry]
name = "blindage"
version = "0.1.0"
description = ""
authors = ["Henrique Sebastião <contato@henriquesebastiao.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.14.0"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.2"
cryptography = "^44.0.0"
alembic = "^1.14.0"
argon2-cffi = "^23.1.0"
pyotp = "^2.9.0"
pyperclip = "^1.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
taskipy = "^1.14.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
radon = "^6.0.1"
bandit = "^1.8.0"

[tool.poetry.scripts]
blindage = "blindage.cli.app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E501']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint.per-file-ignores]
"database.py" = ["F811"]
"tests/*" = ["PLR6301"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.coverage.run]
omit = ["blindage/database.py"]

[tool.bandit]
exclude_dirs = ["blindage/messages.py"]

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff format .; ruff check . --fix'
radon = 'radon cc ./blindage -a -na'
bandit = 'bandit -c pyproject.toml -r ./blindage'
pre_test = 'task lint'
test = 'pytest -s -x --cov=blindage -vv'
post_test = 'coverage html'